fix gap

--- a/main.scss
+++ b/main.scss
@@ -11,7 +11,7 @@ html {
 	--column: 2;
 	display: grid;
 	grid-template-columns: repeat(var(--column), 200px);
-	gap: 40px 30px;
+	gap: 40px 5px;
 	justify-content: center;
 
 	@media (min-width: 1000px) {
